# Drone--Gui

./: CMakeLists.txt  Compass.cpp  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  speed.cpp  speed.h  speedometer.cpp  speedometer.h
